# hed-resources

./: .codespellrc  .gitignore  .gitmodules  .lycheeignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  NOTES.md  README.md  build-docs.bat  build-unified-docs.bat  check-links.bat  check_links.py  format-markdown.bat  link_check_results.txt  lychee.toml  pyproject.toml  requirements.txt  serve-docs.bat  serve-sphinx.bat
.github/: copilot-instructions.md
.github/workflows/: black.yaml  black.yml  codespell.yaml  codespell.yml  deploy-docs.yaml  deploy-docs.yml  links.yaml  links.yml  mdformat.yaml  mdformat.yml  ruff.yml
docs/: build_unified.py  requirements.txt
docs/deprecated/: HEDSubmissionToINCF.md
docs/docs/deprecated/: HEDSubmissionToINCF.md
docs/source/: BidsAnnotationQuickstart.md  CTaggerGuide.html  CTaggerGuide.md  DocumentationSummary.md  HEDSubmissionToINCF.md  HedAndEEGLAB.html  HedAndEEGLAB.md  HedAnnotationInNWB.html  HedAnnotationInNWB.md  HedAnnotationQuickstart.md  HedAnnotationSemantics.md  HedConditionsAndDesignMatrices.md  HedGettingStarted.md  HedGovernance.md  HedHistory.md  HedJavascriptTools.html  HedJavascriptTools.md  HedMatlabTools.html  HedMatlabTools.md  HedOnlineTools.html  HedOnlineTools.md  HedPythonTools.html  HedPythonTools.md  HedRemodelingQuickstart.html  HedRemodelingQuickstart.md  HedRemodelingTools.html  HedRemodelingTools.md  HedRolePlaybooks.md  HedSchemaDevelopersGuide.html  HedSchemaDevelopersGuide.md  HedSchemas.md  HedSearchGuide.md  HedSummaryGuide.md  HedTestDatasets.md  HedValidationGuide.md  HedVsCode.md  HowCanYouUseHed.md  IntroductionToHed.md  NWBAnnotationQuickstart.md  UnderstandingHedVersions.md  (+4 more)
docs/source/_static/: REDIRECT_SYSTEM.md  custom.css  fix_sidebar_scroll.js  gh_icon_fix.js  hed-search-config.js  hed-search.js  init-chat-widget.js  osa-chat-widget.css  osa-chat-widget.js  redirect-config.js  redirect.js  search_labels.js
docs/source/_templates/: base.html  layout.html  quicklinks.html  redirect-page-template.html  sidebar-title.html
docs/source/hed-javascript/: README.md  api.md  index.rst  introduction.md  validator.md
docs/source/hed-python/: index.rst
docs/submodule-indexes/: hed-javascript-index.rst  hed-mcp-index.rst
scripts/: README.md  __init__.py  build-unified-docs.bat  build-unified-docs.sh  build_docs.py  format_docs.py  serve-docs.bat  serve-docs.sh  serve_docs.py
