[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hed-resources"
version = "1.0.0"
description = "Documentation and user resources for Hierarchical Event Descriptors (HED)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HED Working Group", email = "hed.maintainers@gmail.com"}
]
maintainers = [
    {name = "HED Maintainers", email = "hed.maintainers@gmail.com"}
]
keywords = [
    "HED", 
    "hierarchical event descriptors", 
    "neuroscience", 
    "EEG", 
    "documentation",
    "BIDS"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.0,<8.2.0",
    "sphinx-book-theme>=1.1.4",
    "myst-parser>=3.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py>=2.0.3",
    "sphinxcontrib-bibtex>=2.6.0",
    "sphinxcontrib-mermaid>=0.7.1",
]
quality = [
    "linkchecker>=10.0.0",
    "codespell>=2.0.0",
    "ruff>=0.0.284",
    "black>=23.0.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
    "mdformat-tables>=0.4.0",
    "pre-commit>=3.0.0",
]
dev = [
    # Documentation dependencies (from docs group)
    "sphinx>=7.1.0",
    "sphinx-book-theme>=1.1.4",
    "myst-parser>=3.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py>=2.0.3",
    "sphinxcontrib-bibtex>=2.6.0",
    "sphinxcontrib-mermaid>=0.7.1",
    # Quality/dev dependencies (from quality group)
    "linkchecker>=10.0.0",
    "codespell>=2.0.0",
    "ruff>=0.0.284",
    "black>=23.0.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
    "mdformat-tables>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://www.hedtags.org/hed-resources"
Documentation = "https://www.hedtags.org/hed-resources"
Repository = "https://github.com/hed-standard/hed-resources"
Issues = "https://github.com/hed-standard/hed-resources/issues"
Changelog = "https://github.com/hed-standard/hed-resources/blob/main/CHANGELOG.md"
"HED Homepage" = "https://www.hedtags.org"
"HED Specification" = "https://www.hedtags.org/hed-specification"

# Tool configurations
[tool.codespell]
skip = "datasets,.git,*.pdf,*.svg,deprecated,*.xml,*.mediawiki,*.omn,*.json,*.html,*.js,*.css,*.png,*.jpg,.venv/*,docs/_build/*,docs/source/_static/*,dist/*"
ignore-words-list = "covert,hed,recuse"
check-filenames = true
check-hidden = true

# Development environment configuration
[tool.black]
line-length = 88
target-version = [ 'py310', 'py311', 'py312', 'py313' ]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Sphinx build directories
  docs/_build
  | \.venv
  | \.git
)/
'''

[tool.mdformat]
wrap = "no"  # Don't wrap lines (important for docs)
number = false  # Don't renumber ordered lists

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["docs/_build/*", ".venv/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "docs/_build",
    "status"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py