[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[project]
name = "hed-resources"
version = "1.0.0"
description = "Documentation and user resources for Hierarchical Event Descriptors (HED)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HED Working Group", email = "hed.maintainers@gmail.com"},
    {name = "Kay Robbins"},
    {name = "Seyed Yahya Shirazi"},
]
maintainers = [
    {name = "HED Maintainers", email = "hed.maintainers@gmail.com"},
    {name = "Kay A. Robbins"},
    {name = "Seyed Yahya Shirazi"},
]
keywords = [
    "HED", 
    "hierarchical event descriptors", 
    "neuroscience", 
    "EEG", 
    "documentation",
    "BIDS"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hed-build-docs = "scripts.build_docs:main"
hed-serve-docs = "scripts.serve_docs:main"

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.0,<10.0.0",
    "furo>=2024.1.29",
    "myst-parser>=3.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py>=2.0.3",
]
quality = [
    "codespell>=2.2.0",
    "ruff>=0.8.0",
    "black>=26.0.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]

[project.urls]
Homepage = "https://www.hedtags.org"
Documentation = "https://www.hedtags.org/hed-resources"
Repository = "https://github.com/hed-standard/hed-resources"
Issues = "https://github.com/hed-standard/hed-resources/issues"
Changelog = "https://github.com/hed-standard/hed-resources/blob/main/CHANGELOG.md"
Specification = "https://www.hedtags.org/hed-specification"

# Tool configurations
[tool.codespell]
skip = "datasets,.git,*.pdf,*.svg,*.xml,*.mediawiki,*.omn,*.json,*.html,*.js,*.css,*.png,*.jpg,pyproject.toml,lychee.toml,.venv,.venv/*,docs/_build,docs/_build/*,docs/source/_static,docs/source/_static/*,docs/source/_templates,docs/source/_templates/*,docs/source/hed-python,docs/source/hed-python/*,docs/source/hed-matlab,docs/source/hed-matlab/*,docs/source/hed-vis,docs/source/hed-vis/*,docs/source/hed-mcp,docs/source/hed-mcp/*,docs/source/ndx-hed,docs/source/ndx-hed/*,docs/source/table-remodeler,docs/source/table-remodeler/*,docs/source/hed-schemas,docs/source/hed-schemas/*,docs/source/hed-javascript,docs/source/hed-javascript/*,docs/source/hed-web,docs/source/hed-web/*,docs/source/CTagger,docs/source/CTagger/*,docs/deprecated,docs/deprecated/*,dist,dist/*,src,src/*"
ignore-words-list = "covert,hed,recuse,parms"
check-filenames = true
check-hidden = true

# Development environment configuration
[tool.black]
line-length = 88
target-version = [ 'py310', 'py311', 'py312', 'py313' ]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Sphinx build directories
  docs/_build
  | \.venv
  | \.git
  # Submodule directories - managed by their own repos
  | submodules
  # Generated docs from submodules
  | docs/source/python-tools
)/
'''

[tool.mdformat]
wrap = "no"  # Don't wrap lines (important for docs)
number = false  # Don't renumber ordered lists

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["docs/_build/*", ".venv/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "docs/_build",
    "submodules",
    "status"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py